Thu Nov 22 10:53:13 CET 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/xmldata/MeshWriter.java: In writeObject() and
	writeObject3D() methods, replace HashSet+ArrayList pair by a
	LinkedHashSet instance.
	* src/org/jcae/mesh/Mesher.java
	  src/org/jcae/mesh/bora/algo/Basic2d.java: Do not call
	Mesh2D.removeDegeneratedEdges() before writing jcae2d files.
	All 2D algorithms can safely be applied to meshes loaded from disk.
	* src/org/jcae/mesh/xmldata/MeshWriter.java (writeObjectNodes): 
	Due to change just above, 2D nodes which represent the same
	topological vertex are now all written onto disk.  But these
	duplicates are written at the end of the file so that they
	can be ignored when converting into 3D.
	* src/org/jcae/mesh/xmldata/MeshToMMesh3DConvert.java
	  src/org/jcae/mesh/bora/xmldata/Storage.java: When reading 2D
	triangles, ignore triangles which are bound to a degenerated edge.
	Duplicate nodes were already ignored.
	* src/org/jcae/mesh/amibe/patch/Mesh2D.java (removeDegeneratedEdges):
	Method removed, it is useless now.
	* src/org/jcae/mesh/amibe/patch/VirtualHalfEdge2D.java (removeDegenerated):
	Ditto.

Wed Nov 21 12:29:30 CET 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/algos2d/SmoothNodes2D.java: New algorithm to
	smooth nodes in parameterized space.

Tue Nov 20 11:32:34 CET 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/cad/CADGeomSurface.java
	  src-occ/org/jcae/mesh/cad/occ/OCCGeomSurface.java: New
	lowerDistance() method.

Sun Nov 18 23:46:48 CET 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/algos3d/ImproveConnectivity.java: New class.

Sat Nov 17 21:56:02 CET 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/algos3d/SmoothNodes3D.java: Quality is
	checked now, so there is no more need to constrain nodes.

Fri Nov 16 12:24:10 CET 2007 Denis Barbier <barbier@users.sourceforge.net>
